Fix off center list items

--- a/style.css
+++ b/style.css
@@ -46,6 +46,12 @@
     border-radius: 5px;
   }
 
+  #ingredients > ul {
+    padding: 0px;
+    margin: 0px;
+    display: inline-block;
+  }
+
   li {
     list-style-type: none;
   }
